2006-03-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/dnd.py:
	* pitivi/effects.py:
	* pitivi/objectfactory.py:
	* pitivi/pitivi.py:
	* pitivi/playground.py:
	* pitivi/project.py:
	* pitivi/settings.py:
	* pitivi/sourcelist.py:
	* pitivi/timeline.py:
	* pitivi/ui/complexinterface.py:
	* pitivi/ui/complexlayer.py:
	* pitivi/ui/complexsource.py:
	* pitivi/ui/complextimeline.py:
	* pitivi/ui/exportsettingswidget.py:
	* pitivi/ui/glade.py:
	* pitivi/ui/gstwidget.py:
	* pitivi/ui/infolayer.py:
	* pitivi/ui/layerwidgets.py:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/plumber.py:
	* pitivi/ui/projectsettings.py:
	* pitivi/ui/ruler.py:
	* pitivi/ui/sourcefactories.py:
	* pitivi/ui/timeline.py:
	* pitivi/ui/timelineobjects.py:
	* pitivi/ui/tracklayer.py:
	More module documentation
	* pitivi/ui/sourcelist.py:
	What on earth is that file still doing in cvs ??

2006-03-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/debug.py:
	File that should have gone a long time ago.

2006-03-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/__init__.py:
	Documentation
	* pitivi/bin.py:
	Documentation and prepending private method names with underscore
	* pitivi/check.py:
	* pitivi/discoverer.py:
	* pitivi/instance.py:
	Documentation
	* pitivi/ui/__init__.py:
	Documentation

2006-03-22  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/sourcefactories.py: (SourceListWidget._dndDataReceivedCb): 
	remove cruft from selection.data in drag and drop.
	Closes #335503

2006-03-20  Edward Hervey  <edward@fluendo.com>

	* pitivi/discoverer.py:
	Let's grab more issues when discovering.
	Extended 'not-media-file' signal to also signal a reason
	* pitivi/pitivi.py:
	small fix
	* pitivi/sourcelist.py:
	Added 'not-media-file' signal.
	* pitivi/ui/sourcefactories.py:
	Added dialog box to inform user of files that couldn't be discovered.

2006-03-20  Edward Hervey  <edward@fluendo.com>

	* __init__.py: removed
	* pitivi/ui/complexinterface.py:
	LayeredWidgetInterface is no longer used